<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionName"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/text_receivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivers_text" />

        <Spinner
            android:id="@+id/spinner_receivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/receivers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_text" />

        <Spinner
            android:id="@+id/spinner_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/channels" />

        <TextView
            android:id="@+id/text_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups_text" />

        <Spinner
            android:id="@+id/spinner_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/groups" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/pitch_bend_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pitch_bend_toggle_text"
            android:onClick="onToggleSetPitchBend"
            android:checked="true"
            />

        <CheckBox
            android:id="@+id/lock_screen_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_screen_text"
            android:onClick="onToggleScreenLock"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/try_midi_ci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_midi_ci_text"
            android:checked="true"
            android:onClick="onToggleTryMidiCI"
            />

        <CheckBox
            android:id="@+id/midi_ci_version_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midi_ci_version_2"
            android:checked="true"
            android:onClick="onToggleUseMidiCiVersion2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="0.6">

        <TextView
            android:id="@+id/text_program_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/program_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onProgramDelta"
            android:text="-10" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onProgramDelta"
            android:text="-1" />

        <Button
            android:id="@+id/button_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onProgramSend"
            android:text="0" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onProgramDelta"
            android:text="+1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onProgramDelta"
            android:text="+10" />
    </LinearLayout>

    <com.example.android.miditools.MusicKeyboardView
        android:id="@+id/musicKeyboardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

</LinearLayout>
